--- a/logIn.html
+++ b/logIn.html
@@ -112,8 +112,70 @@
             </form>
         </div>
     </main>
-
+    <br>
     <footer>
+        <div class="subfooter">
+            <div class="subfoo">
+
+
+                <div class="title">
+
+                    <p> Our Story </p>
+                    <p> Our Vision</p>
+
+                </div>
+                <div class="story">
+                    <p>He ordered his regular breakfast. Two eggs and cheese sandwich, hash browns, and two strips of bacon. He continued to look at the menu wondering if this would be the day he added something new. This was also part of the routine. A
+                        few seconds of hesitation to see if something else would be added to the order before demuring and saying that would be all. It was the same exact meal that he had ordered every day for the past two years. He ordered his regular
+                        breakfast. Two eggs and cheese sandwich, hash browns, and two strips of bacon. He continued to look at the menu wondering if this would be the day he added something new. This was also part of the routine. A few seconds of hesitation
+                        to see if something else would be added to the order before demuring and saying that would be all. It was the same exact meal that he had ordered every day for the past two years.</p>
+                    <p>It wasn't quite yet time to panic. There was still time to salvage the situation. At least that is what she was telling himself. The reality was that it was time to panic and there wasn't time to salvage the situation, but he continued
+                        to delude himself into believing there was. It wasn't quite yet time to panic. There was still time to salvage the situation. At least that is what she was telling himself. The reality was that it was time to panic and there wasn't
+                        time to salvage the situation, but he continued to delude himself into believing there was.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="bottom">
+            <div class="codepromo">
+                <p>SIGN UP FOR NEWS & GET 10% OFF</p>
+                <div class="codepromo2" id="formindex">
+
+                    <input type="text" id="email" name="email" placeholder="Your Email" required>
+                    <button class="submitemail" onclick="checkin()">@</button>
+
+                </div>
+            </div>
+
+        </div>
+        <div class="foo">
+
+            <div class="boxes">
+
+                <div class="box1">
+                    Customer Services <br> Privacy Policy<br> Return Policy<br> Shipping <br> Order Tracker
+                </div>
+
+                <div>
+                    <a href="https://www.facebook.com/">Facebook</a> <br>
+                    <a href="https://twitter.com/">Twitter </a><br>
+                    <a href="https://www.instagram.com/">Instagram</a> <br>
+                    <a href="https://www.pinterest.ca/">Pinterest</a> <br>
+                </div>
+
+
+
+                <div class="box2">
+                    Email us: <br>
+                    <a href="mailto:DIY@8117-Team.ca?subject=inquiry%20from%20website">
+                        8117-Team@algonquin.ca</a> <br> Fax : (613) 000-0000 <br> Phone Number : (613) 123 4567
+                </div>
+
+            </div>
+        </div>
+        <div class="thankyou">
+            Copyright 2020 © All Rights Reserved | This website is owned by "Namira, Pattol, Tariq, Khadija" | Our gratitude to you for all you have done Professor Frank
+        </div>
     </footer>
 </body>
 <script src="script/log-in.js"></script>
