--- a/index1.html
+++ b/index1.html
@@ -175,7 +175,9 @@
         </div>
     </footer>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
+    <script src="script/cookies.js"></script>
     <script src="script/code.js"></script>
 </body>
 
